--- a/EDA/Quora_Question_Pairs_EDA.ipynb
+++ b/EDA/Quora_Question_Pairs_EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1YDMslaAoo9ITNRSagkdFtpGfJDtWlcuO",
-      "authorship_tag": "ABX9TyMm2h73gn2Ug/H9xchc41cr",
+      "authorship_tag": "ABX9TyMxNPDUaKy16s2pimkSA4Vc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,9 +46,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kMvW9Ez5tnL0",
-        "outputId": "797dfc13-31a2-46d4-90e2-c256a1f6cd82"
+        "outputId": "9c9466e8-be45-4dd6-9f01-f7116b6aac36"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,9 +69,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "slNz7YPa39Mw",
-        "outputId": "4e6f59ee-5288-4294-e9a2-e37880281fc3"
+        "outputId": "66e73322-2964-4126-9fb7-5ccbe6b4ee69"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,9 +92,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RzZn8aty4HH4",
-        "outputId": "7f8c39bb-4766-4a3a-973a-74502e917241"
+        "outputId": "771ec92f-1885-4fd6-a6d5-26774560585f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "JTu5SSwq5ZZ4"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,9 +167,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MA25S-cO6Zbc",
-        "outputId": "52bf7e6f-eeda-4d7b-b0d8-6de7706861f0"
+        "outputId": "25c37c1c-f580-4591-c7aa-47c9f5523ab9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,12 +190,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 337
+          "height": 206
         },
         "id": "eIxIvWOX6cdv",
-        "outputId": "c3642da8-7b7c-4a3d-c272-13678a34789d"
+        "outputId": "882d72f9-7966-43e5-8094-69b0dfb85fcf"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +217,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c62e62fe-b250-4ef0-9011-abecf4a176fb\">\n",
+              "  <div id=\"df-843adcc7-82ae-4cb6-adea-2427427b8a77\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -294,7 +294,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c62e62fe-b250-4ef0-9011-abecf4a176fb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-843adcc7-82ae-4cb6-adea-2427427b8a77')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -345,12 +345,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c62e62fe-b250-4ef0-9011-abecf4a176fb button.colab-df-convert');\n",
+              "          document.querySelector('#df-843adcc7-82ae-4cb6-adea-2427427b8a77 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c62e62fe-b250-4ef0-9011-abecf4a176fb');\n",
+              "          const element = document.querySelector('#df-843adcc7-82ae-4cb6-adea-2427427b8a77');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -396,7 +396,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d34d63ee-7a6e-41a8-f0f7-cf5e01cf0949"
+        "outputId": "dc3c5f13-9286-44d3-bdf3-1cb05f303af5"
       },
       "execution_count": null,
       "outputs": [
@@ -406,6 +406,37 @@
           "text": [
             "학습 데이터 question 쌍 개수 : 404290\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# quesiton 하나로 잇기\n",
+        "train_set=pd.Series(train_df['question1'].tolist()+train_df['question2'].tolist()).astype(str)\n",
+        "train_set[:3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "43m_PeWp9_hw",
+        "outputId": "d9da8822-6d50-405f-cbe6-e95275fd925f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    What is the step by step guide to invest in sh...\n",
+              "1    What is the story of Kohinoor (Koh-i-Noor) Dia...\n",
+              "2    How can I increase the speed of my internet co...\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     },
@@ -421,37 +452,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# quesiton 하나로 잇기\n",
-        "train_set=pd.Series(train_df['question1'].tolist()+train_df['question2'].tolist()).astype(str)\n",
-        "train_set[:3]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "43m_PeWp9_hw",
-        "outputId": "17a058db-9037-4acc-c9e2-befc84f45de1"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0    What is the step by step guide to invest in sh...\n",
-              "1    What is the story of Kohinoor (Koh-i-Noor) Dia...\n",
-              "2    How can I increase the speed of my internet co...\n",
-              "dtype: object"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "print(\"고유 질문 수 :{}\".format(len(np.unique(train_set))))\n",
         "print(\"중복 질문 수 :{}\".format(np.sum(train_set.value_counts()>1)))"
       ],
@@ -460,7 +460,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bXR8QYk4BCLE",
-        "outputId": "c3b5585c-5ea8-4546-af53-5fdb869fe40d"
+        "outputId": "8b505716-1e07-411d-fb0f-4ac87a37a141"
       },
       "execution_count": null,
       "outputs": [
@@ -674,7 +674,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 라벨 분포"
+        "## 라벨 분포"
       ],
       "metadata": {
         "id": "BGw-LRVfq_2A"
@@ -693,7 +693,7 @@
           "height": 338
         },
         "id": "rqQNawsurBoo",
-        "outputId": "37a4338c-aad3-486b-c120-1ea34be66b73"
+        "outputId": "c65fda45-eb45-474e-8663-b5e8b8dce57b"
       },
       "execution_count": null,
       "outputs": [
@@ -705,7 +705,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 8
         },
         {
           "output_type": "display_data",
@@ -718,6 +718,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "라벨의 개수를 최대한 균형있게 맞춰줘야 겠다!"
+      ],
+      "metadata": {
+        "id": "80S1fCAefAdT"
+      }
     },
     {
       "cell_type": "markdown",
@@ -748,7 +757,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "THh9n7GRBCV2",
-        "outputId": "3a0cba51-f090-480e-df1f-13c4afa66cff"
+        "outputId": "95da8079-796e-47f1-e287-5b510f420e97"
       },
       "execution_count": null,
       "outputs": [
@@ -765,7 +774,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 11
         }
       ]
     },
@@ -841,14 +850,15 @@
         "print(\"문장 길이 표준편차 : {:.2f}\".format(np.std(train_length)))\n",
         "print(\"문장 길이 중간값 : {}\".format(np.median(train_length)))\n",
         "print(\"문장 길이 1사분위 : {}\".format(np.percentile(train_length,25)))\n",
-        "print(\"문장 길이 3사분위 : {}\".format(np.percentile(train_length,75)))"
+        "print(\"문장 길이 3사분위 : {}\".format(np.percentile(train_length,75)))\n",
+        "print(\"문장 길이 백분위 99% : {}\".format(np.percentile(train_length,99)))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dYH4QafOBKYN",
-        "outputId": "fb83edf2-f823-40e4-c737-b0c4e1b89e13"
+        "outputId": "13127503-8094-4f0f-a896-0a9c3f95bb86"
       },
       "execution_count": null,
       "outputs": [
@@ -862,7 +872,8 @@
             "문장 길이 표준편차 : 31.96\n",
             "문장 길이 중간값 : 51.0\n",
             "문장 길이 1사분위 : 39.0\n",
-            "문장 길이 3사분위 : 72.0\n"
+            "문장 길이 3사분위 : 72.0\n",
+            "문장 길이 백분위 99% : 157.0\n"
           ]
         }
       ]
@@ -939,7 +950,7 @@
       "metadata": {
         "id": "Bcc4l_CtLot3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -965,12 +976,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 613
+          "height": 898
         },
         "id": "xH-E8IvmL2Zv",
         "outputId": "87ca9b3e-531e-458e-b0d1-525186c00c46"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1012,16 +1023,17 @@
         "print(\"단어 개수 표준편차 : {:.2f}\".format(np.std(train_word_count)))\n",
         "print(\"단어 개수 중간값 : {}\".format(np.median(train_word_count)))\n",
         "print(\"단어 개수 1사분위 : {}\".format(np.percentile(train_word_count,25)))\n",
-        "print(\"단어 개수 3사분위 : {}\".format(np.percentile(train_word_count,75)))"
+        "print(\"단어 개수 3사분위 : {}\".format(np.percentile(train_word_count,75)))\n",
+        "print(\"단어 개수 백분위 99% : {}\".format(np.percentile(train_word_count,99)))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fVi7PmDPMotP",
-        "outputId": "6ebb9fec-6684-4fae-a75e-6d2b9f668e1d"
+        "outputId": "5d906637-5dd9-4b9b-f7b3-fd7df2bcbe77"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1033,7 +1045,8 @@
             "단어 개수 표준편차 : 5.88\n",
             "단어 개수 중간값 : 10.0\n",
             "단어 개수 1사분위 : 7.0\n",
-            "단어 개수 3사분위 : 13.0\n"
+            "단어 개수 3사분위 : 13.0\n",
+            "단어 개수 백분위 99% : 31.0\n"
           ]
         }
       ]
@@ -1057,12 +1070,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 527
+          "height": 592
         },
         "id": "exoB4SF3Nh3m",
         "outputId": "b54debab-6f79-473b-9c44-05883ec0ddde"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1104,9 +1117,126 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "qmark=np.mean(train_set.apply(lambda x:'?' in x)) # 물음표 포함 여부\n",
+        "math =np.mean(train_set.apply(lambda x:'[math]' in x)) # 수학기호 포함 여부\n",
+        "punc = np.mean(train_set.apply(lambda x: '.' in x)) # 마침표 포함 여부\n",
+        "capital_first = np.mean(train_set.apply(lambda x: x[0].isupper())) # 첫 번째 대문자\n",
+        "capitals = np.mean(train_set.apply(lambda x: max(word.isupper() for word in x))) # 문장 안에 대문자 포함 여부\n",
+        "numbers = np.mean(train_set.apply(lambda x : max(word.isdigit() for word in x))) # 문장 안에 숫자 포함 여부\n",
+        "\n",
+        "print(\"물음표가 포함된 문장 비율 : {:.2f}%\".format(qmark*100))\n",
+        "print(\"수학기호가 포함된 문장 비율 : {:.2f}%\".format(math*100))\n",
+        "print(\"마침표가 포함된 문장 비율 : {:.2f}%\".format(punc*100))\n",
+        "print(\"첫 번째 단어가 대문자인 문장 비율 : {:.2f}%\".format(capital_first*100))\n",
+        "print(\"대문자가 포함된 문장 비율 : {:.2f}%\".format(capitals*100))\n",
+        "print(\"숫자가 포함된 문장 비율 : {:.2f}%\".format(numbers*100))"
+      ],
+      "metadata": {
+        "id": "TuX2HJjZ-ic_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7d9d23bd-dd2b-4f6f-ebec-01182ab218d7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "물음표가 포함된 문장 비율 : 99.87%\n",
+            "수학기호가 포함된 문장 비율 : 0.12%\n",
+            "마침표가 포함된 문장 비율 : 6.31%\n",
+            "첫 번째 단어가 대문자인 문장 비율 : 99.81%\n",
+            "대문자가 포함된 문장 비율 : 99.95%\n",
+            "숫자가 포함된 문장 비율 : 11.83%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 데이터 전처리"
+      ],
+      "metadata": {
+        "id": "ui_HI6vesv_I"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 라벨 데이터 불균형 처리"
+      ],
+      "metadata": {
+        "id": "JV-E6rAY2OL9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_data=pd.read_csv('train.csv',encoding='UTF-8')"
+      ],
+      "metadata": {
+        "id": "a7Max2D7sw9I"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_pos_data=train_data.loc[train_data['is_duplicate']==1]\n",
+        "train_neg_data=train_data.loc[train_data['is_duplicate']==0]\n",
+        "print(\"이전 pos 개수 : {}, 이전 neg 개수 : {}\".format(len(train_pos_data),len(train_neg_data)))\n",
+        "train_neg_data=train_neg_data.sample(n=len(train_pos_data))\n",
+        "print(\"pos 개수 : {}, neg 개수 : {}\".format(len(train_pos_data),len(train_neg_data)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O6zhBf7O2kH2",
+        "outputId": "c0b105d2-1fbf-4a8a-a6b7-524e4534e802"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이전 pos 개수 : 149263, 이전 neg 개수 : 255027\n",
+            "pos 개수 : 149263, neg 개수 : 149263\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_data=pd.concat([train_neg_data,train_pos_data])"
+      ],
+      "metadata": {
+        "id": "a21kF1Gi3zod"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 물음표나 마침표와 같은 구두점 및 기호 제거 & 모든 문자를 소문자로 변환"
+      ],
+      "metadata": {
+        "id": "UoksYQEr3uEL"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "TuX2HJjZ-ic_"
+        "id": "UopI8YdW3QxG"
       },
       "execution_count": null,
       "outputs": []
