--- a/Model/Quora_Question_Pairs_CNN.ipynb
+++ b/Model/Quora_Question_Pairs_CNN.ipynb
@@ -1225,7 +1225,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "74QFNDvCXg2o",
-        "outputId": "fecef854-7d22-4643-b254-57bd284af904"
+        "outputId": "beecba8c-b84a-430f-d51f-ee2bd7d87784"
       },
       "outputs": [
         {
@@ -1248,7 +1248,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hDR-wjnPmoGW",
-        "outputId": "a0b90cb2-dca8-4fe4-83c1-b22a89b34b11"
+        "outputId": "f46cc12a-ac6f-40cd-f4e6-63f252472cd9"
       },
       "outputs": [
         {
@@ -1271,7 +1271,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f5Yls_97mpRj",
-        "outputId": "f8ab0992-e33d-4b49-bf19-a475320ddf75"
+        "outputId": "bf2f7071-6571-4061-c0c9-8c772534e13e"
       },
       "outputs": [
         {
@@ -1296,7 +1296,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B85YeQUImvVD",
-        "outputId": "50523521-0f62-4315-ae04-ef68236f7642"
+        "outputId": "d33bc143-09f2-4935-bb1f-cfddc22fa76f"
       },
       "outputs": [
         {
@@ -1306,7 +1306,7 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting torchtext==0.6\n",
             "  Downloading torchtext-0.6.0-py3-none-any.whl (64 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m64.2/64.2 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m64.2/64.2 kB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from torchtext==0.6) (4.65.0)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from torchtext==0.6) (2.27.1)\n",
             "Requirement already satisfied: torch in /usr/local/lib/python3.10/dist-packages (from torchtext==0.6) (2.0.0+cu118)\n",
@@ -1314,7 +1314,7 @@
             "Requirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from torchtext==0.6) (1.16.0)\n",
             "Collecting sentencepiece (from torchtext==0.6)\n",
             "  Downloading sentencepiece-0.1.99-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m59.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m59.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->torchtext==0.6) (1.26.15)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->torchtext==0.6) (2022.12.7)\n",
             "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests->torchtext==0.6) (2.0.12)\n",
@@ -1673,13 +1673,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "katVxy19QW5y",
-        "outputId": "b0954cad-540e-429d-e297-8fafc86099a2"
+        "outputId": "ab84c695-0f38-4401-8040-f4cb102bfc8a"
       },
       "outputs": [
         {
@@ -1805,7 +1805,7 @@
       "metadata": {
         "id": "x0iyQVEb6L8e"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1824,7 +1824,7 @@
       "metadata": {
         "id": "poW56gVoD5sE"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1853,12 +1853,12 @@
       "metadata": {
         "id": "8eZs67BkFNTg"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 20,
       "metadata": {
         "id": "LDKA6kfDQ6yY"
       },
@@ -1895,7 +1895,7 @@
       "metadata": {
         "id": "HWcuL8uXcCwW"
       },
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -2009,7 +2009,7 @@
       "metadata": {
         "id": "GOfyqIOuVkZD"
       },
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -2065,7 +2065,7 @@
       "metadata": {
         "id": "e5qyWV_lL4tM"
       },
-      "execution_count": 22,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -2076,7 +2076,7 @@
       "metadata": {
         "id": "P3x5rInaQNCT"
       },
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -2133,7 +2133,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 모델 성능 확인"
+        "## 모델 test 데이터 label 예측"
       ],
       "metadata": {
         "id": "g6o0TLCcn5V_"
@@ -2143,39 +2143,31 @@
       "cell_type": "code",
       "source": [
         "model.load_state_dict(torch.load('./best_weight/best_weight.pt'))\n",
-        "test_loss,test_accuracy=evaluate(model,test_iter,criterion)\n",
-        "print(\"테스트 오차 : {:.2f} , 테스트 정확도 : {:.2f}\".format(test_loss,test_accuracy))"
+        "\n",
+        "submit=torch.Tensor([])\n",
+        "\n",
+        "for batch in test_iter:\n",
+        "  predict=model(batch.text1,batch.text2).tolist()\n",
+        "  torch.cat([submit,predict],-1)\n",
+        "\n",
+        "#submit shape : ( number_of_batch, batch_size )\n",
+        "\n",
+        "submission=torch.flatten(submit,0) # submission shape : ( number_of_batch*batch_size )"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 208
-        },
-        "id": "kIDewyi5dbsR",
-        "outputId": "7608150c-599c-410d-d3d1-a04aac039939"
+        "id": "kIDewyi5dbsR"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-15475d8fa5d6>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./best_weight/best_weight.pt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtest_loss\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest_accuracy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest_iter\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcriterion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"테스트 오차 : {:.2f} , 테스트 정확도 : {:.2f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_loss\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest_accuracy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "10IG4emXkiLaCf0ydnSNlzNtmejM6jMlp",
-      "authorship_tag": "ABX9TyN6HF+TwrWXpB/b2wvAY7Tn",
+      "authorship_tag": "ABX9TyPRJhROJoha+Q8m8RzdDZfp",
       "include_colab_link": true
     },
     "gpuClass": "standard",
